--- a/assets/sass/partials/_sidebar.scss
+++ b/assets/sass/partials/_sidebar.scss
@@ -1,7 +1,7 @@
 #sidebar {
     padding: 40px 40px;
     box-sizing: border-box;
-    overflow: scroll;
+    overflow: hidden auto;
 
     border-right: 1px solid #ddd;
 
